# webserv

./: .gitignore  CMakeLists.txt  Makefile  README.md  test.txt
docs/: README.md
includes/: colors.hpp  includes.hpp  linkedList.hpp  main.hpp  parser.hpp  parser2.hpp  utils.hpp
includes/config/: config.hpp  cutils.hpp  parser.hpp  properties.hpp  validator.hpp
includes/exceptions/: SyntaxException.hpp
includes/exeptions/: SyntaxExeption.hpp
includes/utils/: node.hpp  utils.hpp
srcs/: main.cpp
srcs/config/: SyntaxExeption.hpp  config.cpp  config.hpp  cutils.cpp  parser.cpp  parser2.cpp  validator.cpp  validator.hpp
srcs/core/: server.cpp  server.hpp
srcs/exceptions/: SyntaxException.cpp
srcs/exeptions/: SyntaxExeption.cpp
srcs/utils/: linkedList.cpp  node.cpp  utils.cpp
